# old-elikoga-site

./: .gitignore  elikoga-github-io.cabal  elikoga-site.cabal  hie.yaml  site.hs  stack.yaml
.github/workflows/: build-deploy.yml
assets/css/: default.scss
assets/js/: default.js
sites/: contact.md  index.html
sites/cv/: competitions.html  cv.html  de.html  deOther.html  enOther.html  other.html
src/: Cv.hs  Main.hs  Social.hs
src/Cv/: Competitions.hs  De.hs  En.hs  Internal.hs
templates/: deCompetitionTable.html  default.html  enCompetitionTable.html  social-circle.html
