name:               elikoga-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          Main.hs
  other-modules:    Social
                  , Cv
                  , Cv.De
                  , Cv.En
                  , Cv.Internal
  build-depends:    base == 4.*
                  , hakyll == 4.13.*
                  , hakyll-sass == 0.2.*
  hs-source-dirs:   src
  ghc-options:      -threaded
  default-language: Haskell2010
